# web-value-tracker

./: Cargo.toml  README.md  index.html  rustfmt.toml  web_value_tracker-d1277971b897985b.js  web_value_tracker-d1277971b897985b_bg.wasm
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
